Deploy on server

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,4 @@
 API_AUTHORIZATION_TOKEN="Ваш токен авторизации от OKO CRM"
 DJANGO_SECRET_KEY="Ключ Django"
+DEBUG=False
+SERVER_IP="IP адрес сервера"
